--- a/src/main/webapp/resources/income_report/opd_professional_payment.xhtml
+++ b/src/main/webapp/resources/income_report/opd_professional_payment.xhtml
@@ -18,7 +18,7 @@
                 <p:outputLabel value="OPD Professional Payment" />    
             </f:facet>
             <p:column>
-                <h:outputLabel value="#{a.department.name}" rendered="#{a.totalPayment!=0}"/>
+                <h:outputLabel value="#{a.specility}" rendered="#{a.totalPayment!=0}"/>
             </p:column>
             <p:column></p:column>
             <p:column></p:column>
