--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -34,7 +34,7 @@
                         <h:outputLabel  value="Sessions" ></h:outputLabel>
                         <h:panelGrid id="gpSelectText" >
                             <p:selectOneListbox  id="lstSelect" converter="sscon"    value="#{sheduleController.current}" style="width: 400px; height: 400px;"  >
-                                <f:selectItems  value="#{sheduleController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                <f:selectItems  value="#{sheduleController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name} - #{myItem.dayString}" ></f:selectItems>
                                 <f:ajax render="gpDetail" execute="lstSelect" event="click" listener="#{sheduleController.fillFees()}" >
                                 </f:ajax>
                             </p:selectOneListbox>
