--- a/src/main/webapp/pharmacy/unit_report_by_item.xhtml
+++ b/src/main/webapp/pharmacy/unit_report_by_item.xhtml
@@ -58,11 +58,14 @@
                                 <f:facet name="header">
                                     <h:outputLabel value="Unit Issue By Item(Batch)"/>
                                     <br/>
+                                    <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/>
+                                    <h:outputLabel value="To "/>
+                                    <h:outputLabel value="#{reportsTransfer.toDepartment.name}"/>
+                                    <br/>
                                     <h:outputLabel value="From  "/>
                                     <h:outputLabel value="#{reportsTransfer.fromDate}">
                                         <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
-                                    </h:outputLabel>
-                                    <p:spacer width="10" height="1"/>
+                                    </h:outputLabel>                                  
                                     <h:outputLabel value="To  "/>
                                     <h:outputLabel value="#{reportsTransfer.toDate}">
                                         <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
