--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -96,6 +96,8 @@
                                         <p:commandButton styleClass="linkButton" value="Transfer Receive By Bill Item" action="pharmacy_report_transfer_receive_bill_item" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="Transfer Issue by Bill" action="pharmacy_report_transfer_issue_bill" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="Transfer Receive by Bill" action="pharmacy_report_transfer_receive_bill" ajax="false" ></p:commandButton>
+                                        <p:commandButton styleClass="linkButton" value="Transfer Issue by Bill(Summery)" action="pharmacy_report_transfer_issue_bill_summery" ajax="false" ></p:commandButton>                            
+                                        <p:commandButton styleClass="linkButton" value="Transfer Receive by Bill(Summery)" action="pharmacy_report_transfer_receive_bill_summery" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Report Transfer Issued not Recieved" action="pharmacy_transfer_issued_list_report" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Staff Stock Report" action="pharmacy_report_staff_stock_by_batch" ajax="false" ></p:commandButton>                            
                                     </h:panelGrid>
