Signed-off-by: ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/pharmacy/pharmacy_bill_report.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_bill_report.xhtml
@@ -56,9 +56,7 @@
                                          rowsPerPageTemplate="20, 50, 100" >
                                 <f:facet name="header">
                                     <h:outputLabel value="Pharmacy Sale Report : "/>
-                                    <h:outputLabel value="#{billController.department.name}"/> 
-                                    <br/>
-                                    <h:outputLabel value="From  "/>
+                                    <h:outputLabel value="#{billController.department.name}"/> &#13;&nbsp;
                                     <h:outputLabel value="#{billController.fromDate}">
                                         <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
                                     </h:outputLabel>
