--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_detail_payment_method.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_detail_payment_method.xhtml
@@ -38,7 +38,7 @@
 
                 <p:dataTable id="sum1" value="#{pharmacySaleReport.billedDetail.datedBills}" var="i">
                     <f:facet name="header">                        
-                        <h:outputLabel value="Pharmacy Sale Billed"/><br/>
+                        <h:outputLabel value="Pharmacy Sale Billed"/>
                         <h:outputLabel value="From Date :  "/>
                         <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
                             <f:convertDateTime pattern="dd MMMM yyyy" />
