--- a/src/main/webapp/pharmacy/pharmacy_report_unit_issue_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_unit_issue_bill.xhtml
@@ -51,11 +51,11 @@
                                          stickyHeader="true"
                                          value="#{reportsTransfer.transferBills}" var="i"  >
                                 <f:facet name="header">
-                                    <h:outputLabel value="Unit Issue From "/>
+                                    <h:outputLabel value="Unit Issue From "/>&#13;&nbsp;
                                     <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/> 
                                     <h:outputLabel value=" To "/>
                                     <h:outputLabel value="#{reportsTransfer.toDepartment.name}"/>
-                                    <br/>
+                                    &#13;&nbsp;
                                     <!--<h:panelGrid columns="4">-->
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{reportsTransfer.fromDate}">
