Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/inward/report_bht_issue_by_item.xhtml
+++ b/src/main/webapp/inward/report_bht_issue_by_item.xhtml
@@ -41,7 +41,7 @@
                         <p:dataTable id="tbl"  value="#{reportsTransfer.itemCounts}"  var="i" styleClass="noBorder normalFont" >
 
                             <f:facet name="header">  
-                                <h:outputLabel value="GRN"/>
+                                <h:outputLabel value="BHT Issue"/>
                                 <br/>
                                 <h:outputLabel value="From" />
                                 <h:outputLabel  value="#{reportsTransfer.fromDate}" >
