Signed-off-by: ravisarani <ravisaraniranawaka@gmail.com>

--- a/src/main/webapp/inward/report_bht_issue_by_item.xhtml
+++ b/src/main/webapp/inward/report_bht_issue_by_item.xhtml
@@ -42,7 +42,9 @@
 
                             <f:facet name="header">  
                                 <h:outputLabel value="BHT Issue"/>
-                                <br/>
+                                &#13;&nbsp;
+                                <h:outputLabel value="From"/>
+                                <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/>&#13;&nbsp;
                                 <h:outputLabel value="From" />
                                 <h:outputLabel  value="#{reportsTransfer.fromDate}" >
                                     <f:convertDateTime pattern="dd MM yy hh:mm:ss a"/>
@@ -50,7 +52,7 @@
                                 <h:outputLabel value="To"/>
                                 <h:outputLabel  value="#{reportsTransfer.toDate}" >
                                     <f:convertDateTime pattern="dd MM yy hh:mm:ss a"/>
-                                </h:outputLabel><br/>
+                                </h:outputLabel>&#13;&nbsp;
 
                             </f:facet>
 
