--- a/src/main/webapp/pharmacy/pharmacy_report_bht_issue_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_bht_issue_bill.xhtml
@@ -45,9 +45,9 @@
                             <p:dataTable id="tbl" styleClass="noBorder normalFont"
                                          value="#{reportsTransfer.transferBills}" var="i"  >
                                 <f:facet name="header">
-                                    <h:outputLabel value="BHT Issue From"/>
+                                    <h:outputLabel value="BHT Issue From"/>&#13;&nbsp;
                                     <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/> 
-                                    <br/>
+                                   &#13;&nbsp;
                                     <!--<h:panelGrid columns="4">-->
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{reportsTransfer.fromDate}">
