--- a/src/main/webapp/pharmacy/pharmacy_report_bht_issue_billItem.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_bht_issue_billItem.xhtml
@@ -57,10 +57,10 @@
                                          value="#{reportsTransfer.transferItems}" var="i" 
                                          rowIndexVar="n">
                                 <f:facet name="header">
-                                    <h:outputLabel value="BHT Issue From"/>
+                                    <h:outputLabel value="BHT Issue From"/>&#13;&nbsp;  
                                     <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/> 
-                                    <br/>
-                                    <!--<h:panelGrid columns="4">-->
+                                   &#13;&nbsp;
+                                  
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{reportsTransfer.fromDate}">
                                             <f:convertDateTime pattern="dd/MM/yy" ></f:convertDateTime>
