--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method_by_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery_payment_method_by_bill.xhtml
@@ -57,7 +57,9 @@
                         <h:outputLabel value="To  "/>
                         <h:outputLabel value="#{pharmacySaleReport.toDate}">
                             <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
-                        </h:outputLabel>
+                        </h:outputLabel>&#13;&nbsp;
+                        <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
+                        &#13;&nbsp;
                     </f:facet>
 
                     <p:column headerText="Date">
