--- a/src/main/webapp/pharmacy/pharmacy_report_staff_issue_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_staff_issue_bill.xhtml
@@ -41,12 +41,12 @@
                                 <f:facet name="header">
                                     <!--<h:panelGrid columns="4">-->
                                     <h:outputLabel value="Detailed Transfer Listing"/>
-                                    <br/>
+                                    &#13;&nbsp;
                                     <h:outputLabel value="From  "/>
                                     <h:outputLabel value="#{searchController.fromDate}">
                                         <f:convertDateTime pattern="dd/MM/yy &nbsp; hh:mm a" ></f:convertDateTime>
-                                    </h:outputLabel>
-                                    <h:outputLabel value="To  "/>
+                                    </h:outputLabel> &#13;&nbsp;
+                                    <h:outputLabel value="To "/> &#13;&nbsp;
                                     <h:outputLabel value="#{searchController.toDate}">
                                         <f:convertDateTime pattern="dd/MM/yy &nbsp; hh:mm a" ></f:convertDateTime>
                                     </h:outputLabel>
