--- a/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_item_count_bht_issue_count.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_transfer_receive_item_count_bht_issue_count.xhtml
@@ -52,7 +52,7 @@
 
                                 <f:facet name="header">
                                         <h:outputLabel value="Issue From  #{reportsTransfer.fromDepartment.name} Recive To #{reportsTransfer.toDepartment.name} &amp; BHT Issue From #{reportsTransfer.toDepartment.name}"/>
-                                       <br/>
+                                       &#13;&nbsp;
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{reportsTransfer.fromDate}">
                                             <f:convertDateTime pattern="dd/MM/yy &nbsp; hh:mm:ss a" ></f:convertDateTime>
