--- a/src/main/webapp/pharmacy/unit_report_by_item.xhtml
+++ b/src/main/webapp/pharmacy/unit_report_by_item.xhtml
@@ -57,11 +57,11 @@
                                          var="i"   >
                                 <f:facet name="header">
                                     <h:outputLabel value="Unit Issue By Item(Batch)"/>
-                                    <br/>
+                                    &#13;&nbsp;
                                     <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/>
                                     <h:outputLabel value="To "/>
                                     <h:outputLabel value="#{reportsTransfer.toDepartment.name}"/>
-                                    <br/>
+                                    &#13;&nbsp;
                                     <h:outputLabel value="From  "/>
                                     <h:outputLabel value="#{reportsTransfer.fromDate}">
                                         <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
