--- a/src/main/webapp/pharmacy_wholesale/pharmacy_report_credit.xhtml
+++ b/src/main/webapp/pharmacy_wholesale/pharmacy_report_credit.xhtml
@@ -57,7 +57,7 @@
                                 <f:facet name="header">
                                     <h:outputLabel value="Pharmacy WholeSale Credit Bills"/>
                                     <h:outputLabel value=" - #{billController.department.name}" rendered="#{billController.department ne null}"/> 
-                                    <br/>
+                                    &#13;&nbsp;
                                         <h:outputLabel value="From  "/>
                                         <h:outputLabel value="#{billController.fromDate}">
                                             <f:convertDateTime pattern="yyyy MM dd - hh:mm:ss a" ></f:convertDateTime>
