--- a/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement_item_batch.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_category_vice_movement_item_batch.xhtml
@@ -61,17 +61,19 @@
                 <p:dataTable id="sum1" value="#{pharmacySaleReport.categoryMovementReportRows}" var="i">   
                     <f:facet name="header">
                         <p:outputLabel value="CATEGORY-VICE MOVEMENT REPORT" />
-                        <br/>
+                        &#13;&nbsp;
+                        <h:outputLabel value="From"/>
+                        <h:outputLabel value="#{pharmacySaleReport.department.name}"/>&#13;&nbsp;
                         <h:outputLabel value="From  "/>
                         <h:outputLabel value="#{pharmacySaleReport.fromDate}">
                             <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
                         </h:outputLabel>
-                        <p:spacer width="10" height="1"/>
+                        &#13;&nbsp;
                         <h:outputLabel value="To  "/>
                         <h:outputLabel value="#{pharmacySaleReport.toDate}">
                             <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
                         </h:outputLabel>
-                        <br/>
+                       &#13;&nbsp;
                     </f:facet>
 
                     <p:column >
