--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_billItems.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_billItems.xhtml
@@ -60,14 +60,14 @@
                         <h:outputLabel value="From Date :  "/>
                         <h:outputLabel value="#{pharmacySaleReport.fromDate}"  >
                             <f:convertDateTime pattern="dd MMMM yyyy" />
-                        </h:outputLabel>
+                        </h:outputLabel>&#13;&nbsp;
                         <h:outputLabel value="To Date"/>
                         <h:outputLabel value="#{pharmacySaleReport.toDate}"  >
                             <f:convertDateTime pattern="dd MMMM yyyy" />
                         </h:outputLabel>  
-                        <br/>
+                        &#13;&nbsp;
                         <h:outputLabel value="Pharmacy Sale BillItems"/>
-                        <br/>
+                        &#13;&nbsp;
                         <h:outputLabel value="Department : #{pharmacySaleReport.department.name}"/>
                     </f:facet>
                     <p:column>
