--- a/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_report_sale_by_date_summery.xhtml
@@ -50,13 +50,13 @@
                         <h:outputLabel value="From  "/>
                         <h:outputLabel value="#{pharmacySaleReport.fromDate}">
                             <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
-                        </h:outputLabel>
-                        <p:spacer width="10" height="1"/>
+                        </h:outputLabel>&#13;&nbsp;
                         <h:outputLabel value="To  "/>
                         <h:outputLabel value="#{pharmacySaleReport.toDate}">
                             <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
-                        </h:outputLabel>
-                        <br/>
+                        </h:outputLabel>&#13;&nbsp;
+                        <h:outputLabel value="#{pharmacySaleReport.department.name}"/>
+                            &#13;&nbsp;
                     </f:facet>
                     <f:facet name="header" >
                         <p:outputLabel value="Sales Summary Report By Date" />
