--- a/src/main/webapp/pharmacy/unit_report_by_item_1.xhtml
+++ b/src/main/webapp/pharmacy/unit_report_by_item_1.xhtml
@@ -56,12 +56,15 @@
                                          var="i"  >
                                 <f:facet name="header" >
                                     <p:outputLabel value="Pharmacy Unit Issue Item Count With Net Total" />
-                                    <br/>
+                                    &#13;&nbsp;
+                                    <h:outputLabel value="Form"/>
+                                    <h:outputLabel value="#{reportsTransfer.fromDepartment.name}"/>
+                                    <h:outputLabel value="To"/>
+                                    <h:outputLabel value="#{reportsTransfer.toDepartment.name}"/>&#13;&nbsp;
                                     <h:outputLabel value="From  "/>
                                     <h:outputLabel value="#{reportsTransfer.fromDate}">
                                         <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
                                     </h:outputLabel>
-                                    <p:spacer width="10" height="1"/>
                                     <h:outputLabel value="To  "/>
                                     <h:outputLabel value="#{reportsTransfer.toDate}">
                                         <f:convertDateTime pattern="dd MM yyyy" ></f:convertDateTime>
