--- a/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_detailed_by_user.xhtml
@@ -568,7 +568,7 @@
                         <p:spacer height="30"/>
 
 
-                        <p:dataTable id="sum8" value="#{commonReport.creditSlipSumAfter}"  var="i" >
+                        <p:dataTable id="sum8" value="#{commonReport.creditSlipSumAfter}"  var="i" rendered="false" >
                             <f:facet name="header">
                                 Credit Summary
                             </f:facet>
@@ -585,7 +585,7 @@
                         <p:spacer height="30"/>
 
 
-                        <p:dataTable id="sum9" value="#{commonReport.creditSlipSumAfter}"  var="i" >
+                        <p:dataTable id="sum9" value="#{commonReport.creditSlipSumAfter}"  var="i" rendered="false" >
                             <f:facet name="header">
                                 Credit Summary
                             </f:facet>
@@ -601,7 +601,7 @@
 
                         <p:spacer height="30"/>
 
-                        <p:dataTable id="sum10" value="#{commonReport.cashChequeSumAfter}"  var="i" >
+                        <p:dataTable id="sum10" value="#{commonReport.cashChequeSumAfter}"  var="i" rendered="false" >
                             <f:facet name="header">
                                 <h:outputLabel value="Cash Summary"/>
                             </f:facet>
@@ -614,7 +614,22 @@
                                 </h:outputLabel>
                             </p:column>
                         </p:dataTable>
-
+                        
+                        <p:spacer height="30"/>
+                        
+                        <p:dataTable id="sum22" value="#{commonReport.cashChequeCreditSummery}"  var="i" >
+                            <f:facet name="header">
+                                <h:outputLabel value="Summary"/>
+                            </f:facet>
+                            <p:column>
+                                <h:outputLabel value="#{i.string}"/>
+                            </p:column>
+                            <p:column style="font-weight: bold;text-align:right;" >
+                                <h:outputLabel value="#{i.value}">
+                                    <f:convertNumber pattern="#,##0.00" />
+                                </h:outputLabel>
+                            </p:column>
+                        </p:dataTable>
 
                         <p:spacer height="30"/>
 
