--- a/src/main/webapp/reportCashier/report_cashier_detailed_by_user_by_reciptno.xhtml
+++ b/src/main/webapp/reportCashier/report_cashier_detailed_by_user_by_reciptno.xhtml
@@ -553,9 +553,9 @@
                         <p:spacer height="30"/>
 
 
-                        <p:dataTable id="sum3" value="#{commonReport.creditSlipSumAfter}"  var="i" >
+                        <p:dataTable id="sum3" value="#{commonReport.creditSlipSumAfter}"  var="i" rendered="false" >
                             <f:facet name="header">
-                                Credit Summary
+                                <h:outputLabel value="Credit Summary  After Cash Transaction"/>
                             </f:facet>
                             <p:column>
                                 <h:outputLabel value="#{i.string}"/>
@@ -569,10 +569,9 @@
 
                         <p:spacer height="30"/>
 
-
-                        <p:dataTable id="sum5" value="#{commonReport.creditSlipSumAfter}"  var="i" >
+                        <p:dataTable id="sum4" value="#{commonReport.cashChequeSumAfter}"  var="i" rendered="false" >
                             <f:facet name="header">
-                                Credit Summary
+                                <h:outputLabel value="Cash Summary  After Cash Transaction"/>
                             </f:facet>
                             <p:column>
                                 <h:outputLabel value="#{i.string}"/>
@@ -582,13 +581,13 @@
                                     <f:convertNumber pattern="#,##0.00" />
                                 </h:outputLabel>
                             </p:column>
-                        </p:dataTable>                
-
+                        </p:dataTable>
+                        
                         <p:spacer height="30"/>
-
-                        <p:dataTable id="sum4" value="#{commonReport.cashChequeSumAfter}"  var="i" >
+                        
+                        <p:dataTable id="sum22" value="#{commonReport.cashChequeCreditSummery}"  var="i" >
                             <f:facet name="header">
-                                <h:outputLabel value="Cash Summary"/>
+                                <h:outputLabel value="Summary"/>
                             </f:facet>
                             <p:column>
                                 <h:outputLabel value="#{i.string}"/>
