Book keeping summery changes Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/reportInstitution/report_cash_category_with_pro_month.xhtml
+++ b/src/main/webapp/reportInstitution/report_cash_category_with_pro_month.xhtml
@@ -118,8 +118,7 @@
 
 
 
-
-            <p:dataTable id="finalSum" value="#{bookKeepingSummery.finalValues}">
+            <p:dataTable id="finalSum" value="#{bookKeepingSummery.finalValues}" var="s" >
                 <p:column>
                     <h:outputLabel value="#{s.string}"/>
                 </p:column>
